[PART 2 EXERCISE 2.17] Phonebook Step 12

--- a/part2/phonebook/src/index.css
+++ b/part2/phonebook/src/index.css
@@ -1,5 +1,5 @@
 .notification {
-    color: rgb(33, 189, 33);
+    color: green;
     background: lightgrey;
     font-size: 20px;
     border-style: solid;
